--- a/courses/2015/montpellier/app-01-mle.Rmd
+++ b/courses/2015/montpellier/app-01-mle.Rmd
@@ -2,7 +2,7 @@
 title: "Frequentist inference, Bernoulli model"
 runtime: shiny
 output: html_document
-layout: nohighlight
+layout: raw
 ---
 
 ```{r, echo=FALSE}
