--- a/courses/2015/montpellier/app-01-data-cloning.Rmd
+++ b/courses/2015/montpellier/app-01-data-cloning.Rmd
@@ -2,12 +2,10 @@
 title: "Bernoulli model, data cloning"
 runtime: shiny
 output: html_document
-layout: default
+layout: raw
 ---
 
 ```{r, echo=FALSE}
-## TODO
-## - figure out why it is not working: Lik is 0
 inputPanel(
   sliderInput("p", label = "Probability (true)",
               min = 0, max = 1, value = 0.3, step = 0.05),
@@ -22,37 +20,26 @@ inputPanel(
   sliderInput("seed", label = "Random seed",
               min = 0, max = 100, value = 0, step = 10)
 )
-
 renderPlot({
     par(las = 1)
     set.seed(input$seed)
     y <- rbinom(n = input$n, size = 1, p = input$p)
     yk <- rep(y, input$K)
-    #y <- rbinom(n = input$n, size = 1, p = input$p)
     pval <- seq(0.001, 0.999, by = 0.0005)
-#    fLik <- function(p, y) {
-#        prod(dbinom(y, size = 1, prob = p))
-#    }
-    fLik <- function(p, y) {
+    fLik <- function(p, y)
         sum(dbinom(y, size = 1, prob = p, log=TRUE))
-    }
-    fPri <- function(p, shape1=0.5, shape2=0.5) {
+    fPri <- function(p, shape1=0.5, shape2=0.5)
         dbeta(p, shape1, shape2)
-    }
-
     Lik <- exp(sapply(pval, fLik, y=yk))
     if (all(Lik <= 0)) {
         est <- optimize(fLik, c(0.001, 0.999), y=yk, maximum=TRUE)$maximum
         Lik[which.min(abs(pval - est))] <- 1
     }
-    #Lik <- sapply(pval, fLik, y=y[1:input$n])
     Pri <- sapply(pval, fPri, input$a, input$b)
     Pos <- Lik * Pri
-
     M <- cbind(Pri=Pri/max(Pri),
-               Lik=Lik/max(Lik),
-               Pos=Pos/max(Pos))
-    ## we can add HDR
+        Lik=Lik/max(Lik),
+        Pos=Pos/max(Pos))
     Col <- c("#cccccc", "#3498db", "#f39c12")
     matplot(pval, M, type = "l", 
         col=Col, lwd=2, lty=1,
