--- a/courses/2015/montpellier/app-01-normal-prior.Rmd
+++ b/courses/2015/montpellier/app-01-normal-prior.Rmd
@@ -2,13 +2,10 @@
 title: "Bernoulli model, Normal prior"
 runtime: shiny
 output: html_document
-layout: default
+layout: raw
 ---
 
 ```{r, echo=FALSE}
-## TODO
-## - implement logit scaling (normal prior)
-## - 2 panes showing 2 scales? What ranges?
 inputPanel(
   sliderInput("p", label = "Probability (true)",
               min = 0, max = 1, value = 0.3, step = 0.05),
@@ -24,30 +21,23 @@ inputPanel(
   sliderInput("seed", label = "Random seed",
               min = 0, max = 100, value = 0, step = 10)
 )
-
 renderPlot({
     par(las = 1)
     set.seed(input$seed)
     y <- rbinom(n = 1000, size = 1, p = input$p)
     pval <- seq(0.001, 0.999, by = 0.0005)
-    fLik <- function(p, y) {
+    fLik <- function(p, y)
         prod(dbinom(y, size = 1, prob = p))
-    }
-    fPri <- function(p, mu, sig2) {
+    fPri <- function(p, mu, sig2)
         dnorm(qlogis(p), mu, sqrt(sig2))
-    }
-
     Lik <- sapply(pval, fLik, y=y[1:input$n])
     Pri <- sapply(pval, fPri, input$mu, input$sig2)
     Pos <- Lik * Pri
-
     M <- cbind(Pri=Pri/max(Pri),
-               Lik=Lik/max(Lik),
-               Pos=Pos/max(Pos))
-    if (input$scale == "logit") {
+        Lik=Lik/max(Lik),
+        Pos=Pos/max(Pos))
+    if (input$scale == "logit")
         pval <- qlogis(pval)
-    }
-    ## we can add HDR
     Col <- c("#cccccc", "#3498db", "#f39c12")
     matplot(pval, M, type = "l", 
         col=Col, lwd=2, lty=1,
