some panda stuff

--- a/template.Rmd
+++ b/template.Rmd
@@ -12,6 +12,11 @@ navbar: inverse
 >* [Workflow](#workflow)
 >* [Showcase](#showcase)
 
+| How this
+| looks like?
+  And this?
+| See...
+
 ## Always start with a header
 
 This `Rmd` file demonstrates how we intend to host text/math/code
@@ -131,6 +136,49 @@ horizontal rule (or slide break):
 2. item 2
  + sub-item 1
  + sub-item 2
+
+ 9)  Ninth
+10)  Tenth
+11)  Eleventh
+       i. subone
+      ii. subtwo
+     iii. subthree
+
+(2) Two
+(5) Three
+1.  Four
+*   Five
+
+#.  one
+#.  two
+#.  three
+
+## Definition lists
+
+Term 1
+
+:   Definition 1
+
+Term 2 with *inline markup*
+
+:   Definition 2
+
+        { some code, part of Definition 2 }
+
+    Third paragraph of definition 2.
+
+Term 1
+  ~ Definition 1
+
+Term 2
+  ~ Definition 2a
+  ~ Definition 2b
+
+
+(@good)  This is a good example.
+
+As (@good) illustrates, ...
+
 
 ## Table formatting
 
