--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -22,7 +22,20 @@ and the app will run through RStudios built-in web local server.
 
 The **html** link leads to a web page that shows the R code in the app.
 
-### Lecture 1
+### Example
+
+Here is the code from the MLE app:
+
+<div class="embed-responsive embed-responsive-16by9">
+<iframe id="frame" name="app" src="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-mle.Rmd"></iframe>
+</div>
+
+You can get a feel of how this app works by checking it out
+on the [shinyapps.io](https://psolymos.shinyapps.io/app01) web service.
+
+### Apps by lecture
+
+#### Lecture 1
 
 App name | html | raw 
 -------- | ---- | ---------
@@ -31,15 +44,4 @@ Bayesian, Beta prior      | [html](./app-01-beta-prior.html) | [raw](https://raw
 Bayesian, Normal prior      | [html](./app-01-normal-prior.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-normal-prior.Rmd)
 Data cloning      | [html](./app-01-data-cloning.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-data-cloning.Rmd)
 
-
-
-### Simple MLE example
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe id="frame" name="app" src="https://psolymos.shinyapps.io/app01"></iframe>
-</div>
-
-Share source file to run in RStudio.
-
-### Simple Bayesian model
 
