--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -22,20 +22,7 @@ and the app will run through RStudios built-in web local server.
 
 The **html** link leads to a web page that shows the R code in the app.
 
-### Example
-
-Here is the code from the MLE app:
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe id="frame" name="app" src="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-mle.Rmd"></iframe>
-</div>
-
-You can get a feel of how this app works by checking it out
-on the [shinyapps.io](https://psolymos.shinyapps.io/app01) web service.
-
-### Apps by lecture
-
-#### Lecture 1
+#### Apps from lecture 1
 
 App name | html | raw 
 -------- | ---- | ---------
