--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -22,7 +22,7 @@ and the app will run through RStudios built-in web local server.
 
 The **html** link leads to a web page that shows the R code in the app.
 
-#### Apps from lecture 1
+### Apps from lecture 1
 
 App name | html | raw 
 -------- | ---- | ---------
