--- a/templateslide.Rmd
+++ b/templateslide.Rmd
@@ -136,5 +136,27 @@ dev.off()
 
 ![]({{ site.url }}/images/480x.png)
 
+---
+
+## continued
+
+```r
+png("~/repos/datacloning.github.io/images/600x800.png",
+    width = 800, height = 600)
+op <- par(las=2, mar=c(6,5,2,2), mfrow=c(2,2))
+barplot(1:length(dcpal_flatly), 
+    names=names(dcpal_flatly), 
+    border=dcpal_flatly$pre_border,
+    col=unlist(dcpal_flatly))
+barplot(1:10, col=dcpal_reds(10), main="Reds")
+barplot(1:10, col=dcpal_grbu(10), main="Green-Blue")
+barplot(1:10, col=dcpal_ogrd(10), main="Orange-Red")
+par(op)
+dev.off()
+```
+
+---
+
+![]({{ site.url }}/images/600x800.png)
 
 </textarea>
