SSC parts added

--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -364,7 +364,96 @@ We may believe that it is most likely to be 0.7. Then we consider distribution w
 
 Posterior distribution: This quantifies the beliefs as modified by the data. The mathematical formulation is as follows:
 
-> MATH COMES HERE ---------- check
+$$(y \mid X = x) \sim h(y; X = x, \theta_{1})$$
+$$X \sim g(x; \theta_{2})$$
+$$\theta = (\theta_{1}, \theta_{2})$$
+$$L(\theta;y) = \int h(y \mid x; \theta_{1}) g(x; \theta_{2}) dx$$
+
+Posterior distribution:
+
+$$\pi(\theta \mid y) = \frac{L(\theta;y) \pi(\theta)}{ \int L(\theta;y) \pi(\theta) d\theta }$$
+
+$\pi(\theta)$ is the prior distribution.
+
+Normal&ndash;Normal model:
+
+$$Y_{ij} \mid \mu_{ij} \sim Normal(\mu_{ij}, \sigma^2)$$
+$$i=1,\ldots,n; j=1,\ldots,m_{n}$$
+$$\mu_{ij} = X_{ij}^{T}\theta + \epsilon_{i}$$
+$$\epsilon_{i} \sim Normal(0, \tau^2)$$
+
+```r
+"model {
+    for (ij in 1:nm) {                #### <- likelihood
+        Y[ij] ~ dnorm(mu[ij], 1/sigma^2)
+        mu[ij] <- inprod(X[ij,], theta) + e[gr[ij]]
+    }
+    for (i in 1:n) {
+        e[i] ~ dnorm(0, 1/tau^2)
+    }
+    for (k in 1:np) {                 #### <- priors
+        theta[k] ~ dnorm(0, 0.001)
+    }
+    sigma ~ dlnorm(0, 0.001)
+    tau ~ dlnorm(0, 0.001)
+}"
+```
+
+```r
+library(rjags) 
+library(dclone)
+set.seed(1234)
+theta <- c(1, -1)
+sigma <- 0.6
+tau <- 0.3
+n <- 50 # number of clusters
+m <- 10 # number of repeats within each cluster
+nm <- n * m # total number of observations
+gr <- rep(1:n, each=m) # group membership defining clusters
+x <- rnorm(nm) # covariate
+X <- model.matrix(~x) # design matrix
+e <- rnorm(n, 0, tau) # random effect
+mu <- drop(X %*% theta) + e[gr] # mean
+Y <- rnorm(nm, mu, sigma) # outcome
+
+model <- custommodel(c("model {
+    for (ij in 1:nm) {                #### <- likelihood
+        Y[ij] ~ dnorm(mu[ij], 1/sigma^2)
+        mu[ij] <- inprod(X[ij,], theta) + e[gr[ij]]
+    }
+    for (i in 1:n) {
+        e[i] ~ dnorm(0, 1/tau^2)
+    }
+    for (k in 1:np) {                 #### <- priors
+        theta[k] ~ dnorm(0, 0.001)
+    }
+    sigma ~ dlnorm(0, 0.001)
+    tau ~ dlnorm(0, 0.001)
+}"))
+
+dat <- list(Y=Y, X=X, nm=nm, n=n, np=ncol(X), gr=gr)
+str(dat)
+
+m <- jags.fit(dat, c("theta", "sigma", "tau"), model, n.update=2000) 
+summary(m)
+pairs(m)
+```
+
+DC:
+
+$$y^{(K)} = (y,\ldots,y)$
+$$L(\theta;y^{K}) = L(\theta;y)^{K}$
+$$\pi_{K}(\theta \mid y) = \frac{[L(\theta;y)]^{K} \pi(\theta)}{ \int [L(\theta;y)]^{K} \pi(\theta) d\theta }$$
+$$\pi_{K}(\theta \mid y) \sim MVN(\hat{\theta}, \frac{1}{K} I^{-1}(\hat{\theta}))$$
+
+```r
+str(dclone(dat, n.clones=2, unchanged="np", multiply=c("nm", "n")))
+mk <- dc.fit(dat, c("theta", "sigma", "tau"), model, n.update=2000,
+    n.clones=c(1,2,4,8), unchanged="np", multiply=c("nm", "n"))
+op <- par(mar=0.6*c(5, 4, 4, 2) + 0.1, cex=0.5)
+plot(dctable(mk), position=c(-100, -100))
+par(op)
+```
 
 R commands: 
  Illustrate the following features:
