--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -50,7 +50,7 @@ Mathematically we write this as follows:
 
 $Y_{i} \sim Binomial(1, p)$  (this is also known as the Bernoulli distribution) are independent, identically distributed (*i.i.d.*) random variables. 
 
-* Observed data: $Y_{1}, Y_{2}, \ldots, Y_{n}$
+* Observed data: \(Y_{1}, Y_{2}, \ldots, Y_{n}\)
 * Unobserved data: $Y_{n+1}, Y_{n+2}, \ldots, Y_{N}$
 
 The probability mass function of the Bernoulli random variable is written as: 
@@ -58,7 +58,7 @@ $P(Y=y) = p^y (1-p)^{1-y}$, where $p \in (0,1)$ and $y=0,1$.
 
 We can now write down the likelihood function. This is proportional to the probability of observing the data at hand: 
 
-\\[ L(p; y_{1}, y_{2}, \ldots, y_{n}) = \prod_{i=1}^{n} p^{y_{i}} (1-p)^{1-y_{i}} \\]
+\[ L(p; y_{1}, y_{2}, \ldots, y_{n}) = \prod_{i=1}^{n} p^{y_{i}} (1-p)^{1-y_{i}} \]
 
 We take product because observations are assumed to be independent of each other. 
 
