--- a/template.Rmd
+++ b/template.Rmd
@@ -16,11 +16,11 @@ Display math:
 
 $$ Y_i = \lambda_i $$
 
-\[ Y_i = \lambda_i \]
+\\[ Y_i = \lambda_i \\]
 
-`\[ Y_i = \lambda_i \]`
+`\\[ Y_i = \lambda_i \\]`
 
-Inline math: $ Y_i = \lambda_i $, \( Y_i = \lambda_i \), `\( Y_i = \lambda_i \)`.
+Inline math: $ Y_i = \lambda_i $, \\( Y_i = \lambda_i \\), `\\( Y_i = \lambda_i \\)`.
 
 
 
