--- a/template.Rmd
+++ b/template.Rmd
@@ -24,7 +24,7 @@ Inline math: $ Y_i = \lambda_i $, \\( Y_i = \lambda_i \\), `\\( Y_i = \lambda_i 
 
 Observed data: $Y_{1}$, $Y_{2}$, $\ldots$, $Y_{n}$
 
-Unobserved data: $Y_{n+1}$, $Y_{n+2}$, $\ldots$, $Y_{N}$
+Unobserved data: ${Y{_n+1}}$, $Y{_n+1}$, $Y_n+2$, $\ldots$, $Y_{N}$
 
 
 
