--- a/template.Rmd
+++ b/template.Rmd
@@ -22,16 +22,22 @@ $$ Y_{i+1} = \lambda_{i+1} $$
 
 `\\[ Y_{i+1} = \lambda_{i+1} \\]`
 
-Inline math: $ Y_i = \lambda_i $, \\( Y_i = \lambda_i \\), `\\( Y_i = \lambda_i \\)`.
+Inline math: $Y_{i+1} = \lambda_{i+1}$, \\( Y_{i+1} = \lambda_{i+1} \\), 
+`\\( Y_{i+1} = \lambda_{i+1} \\)`, $$Y_{i+1} = \lambda_{i+1}$$, 
+`$$Y_{i+1} = \lambda_{i+1}$$`, \\[ Y_{i+1} = \lambda_{i+1} \\].
 
-Inline math: $Y_{i} = \lambda_{i}$, \\( Y_{i} = \lambda_{i} \\), 
-`\\( Y_{i} = \lambda_{i} \\)`, $$Y_{i} = \lambda_{i}$$, `$$Y_{i} = \lambda_{i}$$`, \\[ Y_{i} = \lambda_{i} \\].
+Solution to MathJax parsing problem:
 
-Observed data: $Y_1$, $Y_2$, $\ldots$, $Y_n$
+* Use `$$` for display and inline math.
+* Use empty line above and below display math, so that display math
+  is defined as newline+`$$` and `$$`+newline.
+* Inline math is then defined as:
+  non-whitespace+`$$` or `$$`+non-whitespace.
 
-Unobserved data: $$Y_{n+1}, Y_{n+2}$$
+RStudo parsing before knitr should take care of these:
 
-
+* replace triple backtick and `r` with `{r}`
+* replace inline `$$` with `$`
 
 ## Always start with a header
 
