--- a/template.Rmd
+++ b/template.Rmd
@@ -30,7 +30,8 @@ Solution to MathJax parsing problem:
 
 * Use `$$` for display and inline math.
 * Use `$` for inline math when subscript does not need braces, because:
-  $Y_i$, $Y_100$, $Y_{i,j}$, $Y_{i}$, $Y_{i+1}$, $Y_{100}$.
+  $Y_i$, $Y_100$, $Y_{i,j}$, $Y_{i}$, $Y_{i+1}$, $Y_{100}$, should look like
+  $$Y_i$$, $$Y_100$$, $$Y_{i,j}$$, $$Y_{i}$$, $$Y_{i+1}$$, $$Y_{100}$$.
 * Use empty line above and below display math, so that display math
   is defined as newline+`$$` and `$$`+newline.
 * Inline math is then defined as:
