--- a/index.Rmd
+++ b/index.Rmd
@@ -8,9 +8,8 @@ layout: plain
             <div class="col-md-10 col-md-offset-1">
 
 <h1 class="title">Data Cloning</h1>
-<p>Global optimization for
-frequentist statistical inference using
-Markov-chain Monte Carlo (MCMC) methods.</p>
+<p>Frequentist statistical inference meets
+Bayesian Markov-chain Monte Carlo (MCMC) methods.</p>
 <!-- <p><a class="btn btn-primary" href="{{ site.baseurl }}/dc.html">Learn more</a></p> -->
             
             </div>
