--- a/courses/2015/montpellier/app-01-beta-prior.Rmd
+++ b/courses/2015/montpellier/app-01-beta-prior.Rmd
@@ -12,9 +12,9 @@ inputPanel(
   sliderInput("n", label = "Sample size",
               min = 0, max = 1000, value = 10, step = 10),
   sliderInput("a", label = "Beta prior shape parameter a",
-              min = 0, max = 2, value = 1, step = 0.2),
+              min = 0, max = 2, value = 1, step = 0.1),
   sliderInput("b", label = "Beta prior shape parameter b",
-              min = 0, max = 2, value = 1, step = 0.2),
+              min = 0, max = 2, value = 1, step = 0.1),
   sliderInput("seed", label = "Random seed",
               min = 0, max = 100, value = 0, step = 10)
 )
@@ -36,13 +36,14 @@ renderPlot({
     Col <- c("#cccccc", "#3498db", "#f39c12")
     matplot(pval, M, type = "l", 
         col=Col, lwd=2, lty=1,
-        ylab = "Density", xlab="p",
+        ylab = "Density", 
+        xlab=ifelse(input$scale == "logit", "logit(p)","p"),
         sub=paste0("Mean = ", round(mean(y[1:input$n]), 2), " (", 
             sum(1-y[1:input$n]), " 0s & ", sum(y[1:input$n]), " 1s)"),
         main = paste("Posterior mean =", round(sum(pval * M[,"Pos"]), 2)))
     abline(v = input$p, lwd = 2, col = "#c7254e")
     abline(v = sum(pval * Pos/sum(Pos)), lwd = 2, col = "#18bc9c")
     legend("topleft",lty=1, lwd=2, col=Col, bty="n",
-           legend=c("Prior","Likelihood","Posterior"))
+        legend=c("Prior","Likelihood","Posterior"))
 })
 ```
